# WaveEngine

./: .gitignore  README.md  index.html  testPR.txt
Engine/: CMakeLists.txt  vcpkg.json
Engine/Assets/: Gumball.fbx  NewMaterial.mat  Player.prefab  TankScene.json  UIManager.prefab
Engine/Scene/: AnimationMutant.json  Audio_Test.json  Blockout1-test.scene  Blockout1.json  Blockout1.scene  EditorPreferences.json  Exameple_shader.json  Level1-AtaqueIsaac.json  Level1-AtaqueIsaac.scene  Level1.json  Level1Lol.json  Level1Old.scene  MainExecutableTest.json  Pruba navigation.json  Prueba_NavMesh_2.json  Prueba_NavMesh_3.json  TankScene.json  Temp1.json  Temp1.scene  Temp2.json  Test-Player-Hao.json  Test-Player-Hao.scene  Test.json  TestingEnemies.scene  UI-NoesisGUI-Test.json  audioDemo.json  kai-scene.json  prueba.json  scene.json  tESTmATS.json
Engine/src/: AnimationImporter.cpp  Application.cpp  Application.h  AssetsWindow.cpp  AssetsWindow.h  AudioComponent.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  AudioUtility.h  Backup.cpp  Backup.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CameraLens.cpp  CameraLens.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  CommandHistory.h  Component.cpp  Component.h  ComponentAnimation.cpp  ComponentAnimation.h  ComponentAudioListener.cpp  ComponentAudioSource.cpp  ComponentAudioSource.h  ComponentCamera.cpp  ComponentCamera.h  ComponentCanvas.cpp  ComponentCanvas.h  ComponentLight.cpp  ComponentLight.h  ComponentMaterial.cpp  (+180 more)
(+204 files in other folders)
